force-app/main/default/objects/Opportunity/fields/Account_Credit_Limit__c.field-meta.xml
<CustomField>
    <fullName>Account_Credit_Limit__c</fullName>
    <formula>TEXT( Account.Creditlimit__c )</formula>
    <label>Account Credit Limit</label>
    <type>Text</type>
</CustomField>