force-app/main/default/objects/Opportunity/fields/Account_Owner_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Last_Name__c</fullName>
    <formula>Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Owner Last Name</label>
    <type>Text</type>
</CustomField>