force-app/main/default/objects/Opportunity/fields/Account_Terms_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Terms_Code__c</fullName>
    <formula>TEXT( Account.Termscode__c )</formula>
    <label>Account Terms Code</label>
    <type>Text</type>
</CustomField>