force-app/main/default/objects/Opportunity/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <description>When an opportunity stage is moved to &quot;Closed Won&quot; the date is then stamped.</description>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>