force-app/main/default/objects/Opportunity/fields/Amount_of_Material_Text__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Material_Text__c</fullName>
    <label>Amount of Material Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>