force-app/main/default/objects/Opportunity/fields/Annual_amnt_expected_release_order_size__c.field-meta.xml
<CustomField>
    <fullName>Annual_amnt_expected_release_order_size__c</fullName>
    <inlineHelpText>What annual amount is expected? And release order size.</inlineHelpText>
    <label>Annual amnt expected release order size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1.000 m² pa</fullName>
            </value>
            <value>
                <fullName>&lt;5.000 m²</fullName>
            </value>
            <value>
                <fullName>&lt;10.000 m² pa</fullName>
            </value>
            <value>
                <fullName>&lt;25.000 m² pa</fullName>
            </value>
            <value>
                <fullName>&gt;25.000 m²pa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>