force-app/main/default/objects/Opportunity/fields/Annual_amount_expected_text__c.field-meta.xml
<CustomField>
    <fullName>Annual_amount_expected_text__c</fullName>
    <label>Annual amount expected text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>