force-app/main/default/objects/Opportunity/fields/Annual_amount_release_order_size_text__c.field-meta.xml
<CustomField>
    <fullName>Annual_amount_release_order_size_text__c</fullName>
    <description>For: What annual amount is expected? And release order size.</description>
    <label>Annual amount release order size text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>