force-app/main/default/objects/Opportunity/fields/Appearance__c.field-meta.xml
<CustomField>
    <fullName>Appearance__c</fullName>
    <label>Appearance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gloss appearance</fullName>
            </value>
            <value>
                <fullName>Matte appearance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>