force-app/main/default/objects/Opportunity/fields/Appearance_Text__c.field-meta.xml
<CustomField>
    <fullName>Appearance_Text__c</fullName>
    <label>Appearance Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>