force-app/main/default/objects/Opportunity/fields/Application_Surface__c.field-meta.xml
<CustomField>
    <fullName>Application_Surface__c</fullName>
    <label>Application Surface</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rough</fullName>
            </value>
            <value>
                <fullName>Smooth</fullName>
            </value>
            <value>
                <fullName>Textured</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>