force-app/main/default/objects/Opportunity/fields/Application_surface_material__c.field-meta.xml
<CustomField>
    <fullName>Application_surface_material__c</fullName>
    <description>For: What is the application surface? And condition of surface</description>
    <label>Application surface material</label>
    <length>255</length>
    <type>Text</type>
</CustomField>