force-app/main/default/objects/Opportunity/fields/Automotive_Company__c.field-meta.xml
<CustomField>
    <fullName>Automotive_Company__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automotive Company</label>
    <type>Checkbox</type>
</CustomField>