force-app/main/default/objects/Opportunity/fields/Can_we_produce_the_mateiral_text__c.field-meta.xml
<CustomField>
    <fullName>Can_we_produce_the_mateiral_text__c</fullName>
    <label>Can we produce the material text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>