force-app/main/default/objects/Opportunity/fields/Can_we_produce_the_material__c.field-meta.xml
<CustomField>
    <fullName>Can_we_produce_the_material__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Can we produce the material?</inlineHelpText>
    <label>Can we produce the material?</label>
    <type>Checkbox</type>
</CustomField>