force-app/main/default/objects/Opportunity/fields/Colour_Text__c.field-meta.xml
<CustomField>
    <fullName>Colour_Text__c</fullName>
    <label>Colour Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>