force-app/main/default/objects/Opportunity/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <label>Component Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>topcoat</fullName>
            </value>
            <value>
                <fullName>film</fullName>
            </value>
            <value>
                <fullName>adhesive</fullName>
            </value>
            <value>
                <fullName>liner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>