force-app/main/default/objects/Opportunity/fields/CONEG__c.field-meta.xml
<CustomField>
    <fullName>CONEG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CONEG</label>
    <type>Checkbox</type>
</CustomField>