force-app/main/default/objects/Opportunity/fields/Critical_performance_requirements__c.field-meta.xml
<CustomField>
    <fullName>Critical_performance_requirements__c</fullName>
    <label>Critical performance requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>