force-app/main/default/objects/Opportunity/fields/CSA_or_CUL__c.field-meta.xml
<CustomField>
    <fullName>CSA_or_CUL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CSA or CUL</label>
    <type>Checkbox</type>
</CustomField>