force-app/main/default/objects/Opportunity/fields/Escalated_to_PDR__c.field-meta.xml
<CustomField>
    <fullName>Escalated_to_PDR__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>FYI: If this box is checked, this opportunity has an existing PDR.</inlineHelpText>
    <label>Escalated to PDR</label>
    <type>Checkbox</type>
</CustomField>