force-app/main/default/objects/Opportunity/fields/Exact_Lifetime_for_Label__c.field-meta.xml
<CustomField>
    <fullName>Exact_Lifetime_for_Label__c</fullName>
    <description>For: What is the expected lifetime for the label?</description>
    <label>Exact Lifetime for Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>