force-app/main/default/objects/Opportunity/fields/Expected_Lifetime_for_label__c.field-meta.xml
<CustomField>
    <fullName>Expected_Lifetime_for_label__c</fullName>
    <inlineHelpText>What is the expected lifetime for the label?</inlineHelpText>
    <label>Expected Lifetime for label</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-6 months</fullName>
            </value>
            <value>
                <fullName>6 months - 1 year</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>3-5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>