force-app/main/default/objects/Opportunity/fields/Exposure_resistance_properties_required__c.field-meta.xml
<CustomField>
    <fullName>Exposure_resistance_properties_required__c</fullName>
    <label>Exposure/resistance properties required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>