force-app/main/default/objects/Opportunity/fields/FDA_Indirect_Direct_Food_Contact__c.field-meta.xml
<CustomField>
    <fullName>FDA_Indirect_Direct_Food_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FDA / Indirect / Direct Food Contact</label>
    <type>Checkbox</type>
</CustomField>