force-app/main/default/objects/Opportunity/fields/How_will_it_be_applied__c.field-meta.xml
<CustomField>
    <fullName>How_will_it_be_applied__c</fullName>
    <inlineHelpText>How will it be applied? (Hand, Semi-automatic, Automatic)?</inlineHelpText>
    <label>How will it be applied</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hand</fullName>
            </value>
            <value>
                <fullName>Semi-Automatic</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>