force-app/main/default/objects/Opportunity/fields/How_will_it_be_diecut__c.field-meta.xml
<CustomField>
    <fullName>How_will_it_be_diecut__c</fullName>
    <inlineHelpText>How will it be diecut?</inlineHelpText>
    <label>How will it be diecut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Laser</fullName>
            </value>
            <value>
                <fullName>Backslit</fullName>
            </value>
            <value>
                <fullName>No die cutting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>