force-app/main/default/objects/Opportunity/fields/Is_an_NDA_required__c.field-meta.xml
<CustomField>
    <fullName>Is_an_NDA_required__c</fullName>
    <label>Is an NDA required?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>