force-app/main/default/objects/Opportunity/fields/JournalEntry__c.field-meta.xml
<CustomField>
    <fullName>JournalEntry__c</fullName>
    <label>Journal Entries</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>