force-app/main/default/objects/Opportunity/fields/Known_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Known_Competitors__c</fullName>
    <label>Known Competitors</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>Avery Dennison</fullName>
            </value>
            <value>
                <fullName>3Mactac/Lintec</fullName>
            </value>
            <value>
                <fullName>Raflatac</fullName>
            </value>
            <value>
                <fullName>General Formulations</fullName>
            </value>
            <value>
                <fullName>Ritrama</fullName>
            </value>
            <value>
                <fullName>Wausau Coated Products</fullName>
            </value>
            <value>
                <fullName>Green Bay Packaging</fullName>
            </value>
            <value>
                <fullName>Nekoosa Coated Products</fullName>
            </value>
            <value>
                <fullName>3rd Party Distribution (Grimco, Fellers, Glantz, etc)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>