force-app/main/default/objects/Opportunity/fields/Label_Expected_Temperature_Range__c.field-meta.xml
<CustomField>
    <fullName>Label_Expected_Temperature_Range__c</fullName>
    <label>Label Expected Temperature Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-40C to +150C PET  -40F to +302F</fullName>
            </value>
            <value>
                <fullName>-40C to +80C (PVC,PP,PE)  -40F to +176F</fullName>
            </value>
            <value>
                <fullName>-40C to +100C (PC) -40F to +212F</fullName>
            </value>
            <value>
                <fullName>- 40C to 260C for 5 min, 398°C few second pulse (PI) -40F to 500F, 748F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>