force-app/main/default/objects/Opportunity/fields/Lead_time_customer_is_requesting__c.field-meta.xml
<CustomField>
    <fullName>Lead_time_customer_is_requesting__c</fullName>
    <inlineHelpText>What lead time is the customer requesting for this product?</inlineHelpText>
    <label>Lead time customer is requesting</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-2 Weeks</fullName>
            </value>
            <value>
                <fullName>3-4 Weeks</fullName>
            </value>
            <value>
                <fullName>5-6 Weeks</fullName>
            </value>
            <value>
                <fullName>7-8 Weeks</fullName>
            </value>
            <value>
                <fullName>9-10 Weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>