force-app/main/default/objects/Opportunity/fields/Lead_time_text__c.field-meta.xml
<CustomField>
    <fullName>Lead_time_text__c</fullName>
    <label>Lead time text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>