force-app/main/default/objects/Opportunity/fields/Legacyid__c.field-meta.xml
<CustomField>
    <fullName>Legacyid__c</fullName>
    <externalId>true</externalId>
    <label>Legacyid</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>