force-app/main/default/objects/Opportunity/fields/Manufacturing_Operations_Interested_In__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Operations_Interested_In__c</fullName>
    <label>Manufacturing Operations Interested In</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>