force-app/main/default/objects/Opportunity/fields/Market_Brand_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Market_Brand_Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field to hold the Campaign which does not interfere with Primary Campaign Source</description>
    <label>Market Brand Initiative</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Campaign.Visible_to_Non_Marketing__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Campaign.Is_Marketing_Campaign__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>