force-app/main/default/objects/Opportunity/fields/MOQ_Mitigate_the_Issue__c.field-meta.xml
<CustomField>
    <fullName>MOQ_Mitigate_the_Issue__c</fullName>
    <label>MOQ Mitigate the Issue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>