force-app/main/default/objects/Opportunity/fields/None__c.field-meta.xml
<CustomField>
    <fullName>None__c</fullName>
    <defaultValue>false</defaultValue>
    <label>None</label>
    <type>Checkbox</type>
</CustomField>