force-app/main/default/objects/Opportunity/fields/of_Days_Until_Close__c.field-meta.xml
<CustomField>
    <fullName>of_Days_Until_Close__c</fullName>
    <formula>CloseDate - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days Until Estimated Close Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>