force-app/main/default/objects/Opportunity/fields/Opp_18_Digit_ID__c.field-meta.xml
<CustomField>
    <fullName>Opp_18_Digit_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp. 18 Digit ID</label>
    <type>Text</type>
</CustomField>