force-app/main/default/objects/Opportunity/fields/Opp_of_Closed_Days__c.field-meta.xml
<CustomField>
    <fullName>Opp_of_Closed_Days__c</fullName>
    <formula>IF(IsWon, 
Actual_Close_Date__c - DATEVALUE(CreatedDate),
NULL)</formula>
    <label># of Days until Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>