force-app/main/default/objects/Opportunity/fields/Oppid__c.field-meta.xml
<CustomField>
    <fullName>Oppid__c</fullName>
    <label>Oppid</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>