force-app/main/default/objects/Opportunity/fields/Opportunity_Level__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Level__c</fullName>
    <label>Product Recommendation Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undecided</fullName>
            </value>
            <value>
                <fullName>Level 1: Standard Product (Inventoried Product)</fullName>
            </value>
            <value>
                <fullName>Level 2: Standard Product (BOM Exists)</fullName>
            </value>
            <value>
                <fullName>Level 3: Simple BOM Modification</fullName>
            </value>
            <value>
                <fullName>Level 4: Complex BOM Modification</fullName>
            </value>
            <value>
                <fullName>Level 5: New Product Development</fullName>
            </value>
            <value>
                <fullName>Level 6: Contract Manufacturing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>