force-app/main/default/objects/Opportunity/fields/Order_Release_Size_Text__c.field-meta.xml
<CustomField>
    <fullName>Order_Release_Size_Text__c</fullName>
    <label>Order Release Size Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>