force-app/main/default/objects/Opportunity/fields/Order_release_size_Volume_per_order__c.field-meta.xml
<CustomField>
    <fullName>Order_release_size_Volume_per_order__c</fullName>
    <label>Order release size? (Volume per order)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>250 lm</fullName>
            </value>
            <value>
                <fullName>500 lm</fullName>
            </value>
            <value>
                <fullName>1.000 lm</fullName>
            </value>
            <value>
                <fullName>1.500 lm</fullName>
            </value>
            <value>
                <fullName>2.000 lm</fullName>
            </value>
            <value>
                <fullName>3.000 lm</fullName>
            </value>
            <value>
                <fullName>5.000 lm</fullName>
            </value>
            <value>
                <fullName>10.000 lm</fullName>
            </value>
            <value>
                <fullName>20.000 lm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>