force-app/main/default/objects/Opportunity/fields/Other_Label_Expected_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Other_Label_Expected_Temperature__c</fullName>
    <description>Other Label Expected Temperature</description>
    <label>Other Label Expected Temperature</label>
    <length>255</length>
    <type>Text</type>
</CustomField>