force-app/main/default/objects/Opportunity/fields/Overall_duration_age__c.field-meta.xml
<CustomField>
    <fullName>Overall_duration_age__c</fullName>
    <label>Overall duration/age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>