force-app/main/default/objects/Opportunity/fields/Overlaminate_or_Overvarnish_Comments__c.field-meta.xml
<CustomField>
    <fullName>Overlaminate_or_Overvarnish_Comments__c</fullName>
    <description>For: Is there an overlaminate or overvarnish used?</description>
    <label>Overlaminate or Overvarnish Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>