force-app/main/default/objects/Opportunity/fields/Overlaminate_or_overvarnish_used__c.field-meta.xml
<CustomField>
    <fullName>Overlaminate_or_overvarnish_used__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overlaminate or overvarnish used</label>
    <type>Checkbox</type>
</CustomField>