force-app/main/default/objects/Opportunity/fields/PA_per_delivery_Text__c.field-meta.xml
<CustomField>
    <fullName>PA_per_delivery_Text__c</fullName>
    <label>PA/per delivery Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>