force-app/main/default/objects/Opportunity/fields/PDR_Number__c.field-meta.xml
<CustomField>
    <fullName>PDR_Number__c</fullName>
    <label>PDR Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>