force-app/main/default/objects/Opportunity/fields/Permanent_Removable_or_Repositionable__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Removable_or_Repositionable__c</fullName>
    <inlineHelpText>Does the adhesive need to be permanent, removable, repositionable then permanent?</inlineHelpText>
    <label>Permanent, Removable or Repositionable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Removable</fullName>
            </value>
            <value>
                <fullName>Repositionable Permanent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>