force-app/main/default/objects/Opportunity/fields/Printable_Text__c.field-meta.xml
<CustomField>
    <fullName>Printable_Text__c</fullName>
    <label>Printable Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>