force-app/main/default/objects/Opportunity/fields/Product_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Product_Recommendation__c</fullName>
    <label>Product Recommendation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>