force-app/main/default/objects/Opportunity/fields/Product_Recommendation_Comments__c.field-meta.xml
<CustomField>
    <fullName>Product_Recommendation_Comments__c</fullName>
    <label>Product Recommendation Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>