force-app/main/default/objects/Opportunity/fields/Product_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Product_Segmentation__c</fullName>
    <label>Product Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Finished Products</fullName>
            </value>
            <value>
                <fullName>Functional/Technical</fullName>
            </value>
            <value>
                <fullName>Product Branding/ Graphics</fullName>
            </value>
            <value>
                <fullName>Track &amp; Trace/ Identification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>