force-app/main/default/objects/Opportunity/fields/Product_used_Indoor_or_Outdoor__c.field-meta.xml
<CustomField>
    <fullName>Product_used_Indoor_or_Outdoor__c</fullName>
    <inlineHelpText>Is the product to be used indoor / outdoor?</inlineHelpText>
    <label>Product used Indoor or Outdoor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Indoor</fullName>
            </value>
            <value>
                <fullName>Outdoor</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>