force-app/main/default/objects/Opportunity/fields/Prop_65_Conflict_Minerals__c.field-meta.xml
<CustomField>
    <fullName>Prop_65_Conflict_Minerals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prop 65 / Conflict Minerals</label>
    <type>Checkbox</type>
</CustomField>